Fri Oct 15 10:18:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Fixed warning

Thu Oct 14 18:29:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
          3911 doesn't work with ace_for_tao

Thu Oct 14 13:15:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/Process.h:
        * ace/Process.cpp:
          Changes to allow to dynamically define the max. number of cmdline args.
          The tao_idl compiler was running out of room in certain instances and
          the static max was very conservative.

Thu Oct 14 09:38:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Wchar build fixes.

Wed Oct 13 08:24:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Wchar build fixes.

Wed Oct 13 06:15:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Framework_Component.h:
        * ace/Framework_Component.inl:
        * ace/Framework_Component.cpp:
        * ace/Framework_Component_T.h:
          Use ACE_Copy_Disabled, change c-style cast to const cast, use
          sync macros instead of ACE_MT. Thanks to Ranjit Hande
          <hande at avaya dot com> for reporting the c-style cast warnings

        * tests/Framework_Component_Test.h:
          Layout change

Tue Oct 12 21:12:51 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/DependencyGenerator/GNUObjectGenerator.pm:

          Fixed incorrect Perl regex escaping from my previous commit.

Tue Oct 12 11:41:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Fuzz fixes.

Tue Oct 12 08:06:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added reproducer test for Bugzilla #3911.
